# Bildungsurlaub_Python_ML_DS

./: .gitignore  pyproject.toml
005_DataHandling/010_data_handling/: 20_filtering.py
090_timeseries/: timeseries.py
change_point/: change_point.py
