[project]
name = "python-ml-ds-material"
version = "0.1.0"
description = "This is a project for the 'Python forMachine Learning and Data Science' course"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "folium>=0.19.7",
    "mlxtend>=0.23.4",
    "pandas>=2.3.0",
    "plotnine>=0.14.5",
    "reportlab>=4.4.10",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "xlrd>=2.0.2",
]
